--- a/package.json
+++ b/package.json
@@ -41,45 +41,41 @@
     "@ionic/storage": "2.0.1",
     "@ngrx/effects": "4.1.1",
     "@ngrx/store": "4.1.1",
-    "cordova-android": "6.3.0",
-    "cordova-custom-config": "3.1.3",
+    "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-actionsheet": "2.3.3",
-    "cordova-plugin-add-swift-support": "1.7.1",
-    "cordova-plugin-advanced-http": "1.8.1",
+    "cordova-plugin-advanced-http": "2.0.1",
     "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "1.1.6",
     "cordova-plugin-device-orientation": "1.0.7",
     "cordova-plugin-dialogs": "1.3.3",
-    "cordova-plugin-file": "5.0.0",
-    "cordova-plugin-geolocation": "2.4.3",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-google-analytics": "1.8.3",
     "cordova-plugin-googlemaps": "2.4.6",
     "cordova-plugin-inappbrowser": "1.7.1",
-    "cordova-plugin-ionic": "2.0.4",
-    "cordova-plugin-ionic-webview": "1.1.16",
+    "cordova-plugin-ionic-webview": "2.3.1",
     "cordova-plugin-request-location-accuracy": "2.2.2",
-    "cordova-plugin-splashscreen": "4.0.3",
+    "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.2",
     "cordova-plugin-x-socialsharing": "5.1.7",
     "cordova-sqlite-storage": "2.1.2",
-    "cordova.plugins.diagnostic": "^4.0.10",
+    "cordova.plugins.diagnostic": "4.0.10",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "2.2.1",
     "ionicons": "3.0.0",
     "minimist": "1.2.0",
-    "moment": "2.18.1",
+    "moment": "2.22.2",
     "raven-js": "3.20.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.0.7",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.2.2",
     "xml2js": "0.4.19",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.2",
+    "@ionic/app-scripts": "3.2.1",
     "typescript": "2.4.2"
   },
   "cordovaPlatforms": [
@@ -89,35 +85,17 @@
   "version": "2.7.5",
   "cordova": {
     "plugins": {
-      "cordova-custom-config": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-x-socialsharing": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-actionsheet": {},
       "cordova-plugin-device": {},
       "cordova-plugin-device-orientation": {},
-      "cordova-plugin-geolocation": {
-        "GEOLOCATION_USAGE_DESCRIPTION": " "
-      },
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-splashscreen": {},
-      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
-        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
-      },
-      "cordova-plugin-compat": {},
-      "cordova-plugin-advanced-http": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-google-analytics": {},
-      "cordova-plugin-ionic": {
-        "APP_ID": "1a4d7511",
-        "CHANNEL_NAME": "Production",
-        "UPDATE_METHOD": "background",
-        "UPDATE_API": "https://api.ionicjs.com",
-        "MAX_STORE": "2"
-      },
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
         "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
@@ -127,11 +105,21 @@
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       },
       "cordova-plugin-statusbar": {},
-      "cordova.plugins.diagnostic": {}
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-advanced-http": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "OKHTTP_VERSION": "3.+",
+        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
+      },
+      "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
