--- a/package.json
+++ b/package.json
@@ -23,59 +23,64 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/app-version": "4.4.2",
-    "@ionic-native/core": "4.4.2",
-    "@ionic-native/device": "4.4.2",
-    "@ionic-native/device-orientation": "4.4.2",
-    "@ionic-native/diagnostic": "4.4.2",
-    "@ionic-native/geolocation": "4.4.2",
-    "@ionic-native/google-analytics": "4.4.2",
-    "@ionic-native/google-maps": "4.4.2",
-    "@ionic-native/http": "4.4.2",
-    "@ionic-native/in-app-browser": "4.4.2",
-    "@ionic-native/launch-navigator": "4.4.2",
-    "@ionic-native/location-accuracy": "4.4.2",
-    "@ionic-native/social-sharing": "4.4.2",
-    "@ionic-native/splash-screen": "4.4.2",
-    "@ionic-native/status-bar": "4.4.2",
+    "@ionic-native/action-sheet": "^5.16.0",
+    "@ionic-native/app-version": "^5.16.0",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/device": "^5.16.0",
+    "@ionic-native/device-orientation": "^5.16.0",
+    "@ionic-native/diagnostic": "5.16.0",
+    "@ionic-native/dialogs": "^5.16.0",
+    "@ionic-native/geolocation": "5.16.0",
+    "@ionic-native/google-analytics": "5.16.0",
+    "@ionic-native/google-maps": "^5.0.0-beta.27",
+    "@ionic-native/http": "^5.16.0",
+    "@ionic-native/in-app-browser": "5.16.0",
+    "@ionic-native/launch-navigator": "^5.16.0",
+    "@ionic-native/location-accuracy": "5.16.0",
+    "@ionic-native/social-sharing": "5.16.0",
+    "@ionic-native/splash-screen": "5.16.0",
+    "@ionic-native/sqlite": "5.16.0",
+    "@ionic-native/status-bar": "5.16.0",
     "@ionic/storage": "2.2.0",
     "@ngrx/effects": "4.1.1",
     "@ngrx/store": "4.1.1",
     "cordova-android": "7.1.4",
-    "cordova-ios": "4.5.5",
-    "cordova-plugin-actionsheet": "2.3.3",
-    "cordova-plugin-advanced-http": "2.0.1",
-    "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-device-orientation": "2.0.1",
-    "cordova-plugin-dialogs": "1.3.3",
-    "cordova-plugin-file": "6.0.1",
-    "cordova-plugin-geolocation": "4.0.1",
-    "cordova-plugin-google-analytics": "1.8.3",
-    "cordova-plugin-googlemaps": "2.4.6",
-    "cordova-plugin-inappbrowser": "3.0.0",
-    "cordova-plugin-ionic-webview": "2.3.1",
-    "cordova-plugin-request-location-accuracy": "2.2.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-whitelist": "1.3.2",
-    "cordova-plugin-x-socialsharing": "5.1.7",
-    "cordova-sqlite-storage": "2.6.0",
-    "cordova.plugins.diagnostic": "4.0.10",
+    "cordova-ios": "5.0.1",
+    "cordova-plugin-actionsheet": "^2.3.3",
+    "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-device-orientation": "^2.0.1",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-google-analytics": "1.8.6",
+    "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
+    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-inappbrowser": "3.1.0",
+    "cordova-plugin-ionic-keyboard": "2.2.0",
+    "cordova-plugin-ionic-webview": "4.1.3",
+    "cordova-plugin-request-location-accuracy": "2.3.0",
+    "cordova-plugin-splashscreen": "5.0.3",
+    "cordova-plugin-statusbar": "2.4.3",
+    "cordova-plugin-whitelist": "1.3.4",
+    "cordova-plugin-x-socialsharing": "5.6.2",
+    "cordova-sqlite-storage": "3.4.0",
+    "cordova.plugins.diagnostic": "5.0.1",
+    "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
-    "ionic-plugin-keyboard": "2.2.1",
     "ionicons": "3.0.0",
     "minimist": "1.2.0",
     "moment": "2.22.2",
     "raven-js": "3.20.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.2.2",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.4",
     "xml2js": "0.4.19",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.4",
+    "@ionic/app-scripts": "3.2.4",
     "typescript": "2.4.2"
   },
   "cordovaPlatforms": [
@@ -85,41 +90,53 @@
   "version": "2.7.5",
   "cordova": {
     "plugins": {
-      "cordova-plugin-app-version": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-x-socialsharing": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-actionsheet": {},
-      "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-google-analytics": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
-        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+",
-        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
-        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
-      },
-      "cordova-plugin-statusbar": {},
-      "cordova.plugins.diagnostic": {},
-      "cordova-plugin-geolocation": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      },
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+",
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-request-location-accuracy": {
+        "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+      },
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-google-analytics": {
+        "GMS_VERSION": "11.0.1"
+      },
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-device-orientation": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      },
+      "cordova-plugin-actionsheet": {},
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {
-        "OKHTTP_VERSION": "3.+",
+        "GOOGLE_API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
+        "OKHTTP_VERSION": "3.12.0",
         "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
       },
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-device-orientation": {}
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
+        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
+      }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
